# FlyEngine

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt
App/: CmakeLists.txt  GLFWApp.cpp  main.cpp
Asset/Private/Shader/: compiler.bat
Backend/: BackendEnum.hpp  CmakeLists.txt  DeviceFactory.hpp
Backend/Core/: CmakeLists.txt  FlyBuffer.hpp  FlyCommandBuffer.hpp  FlyContext.hpp  FlyDefine.hpp  FlyDescriptorSet.hpp  FlyDescriptorSetLayout.hpp  FlyDevice.hpp  FlyFence.hpp  FlyFramebuffer.hpp  FlyInputAssembler.hpp  FlyObject.hpp  FlyPipelineLayout.hpp  FlyPipelineState.hpp  FlyQueue.hpp  FlyRenderPass.hpp  FlySampler.hpp  FlyShader.hpp  FlyTexture.hpp  FlyTextureView.hpp  FlyType.hpp  NonCopyable.hpp
Backend/Vulkan/: CmakeLists.txt  FVkBuffer.cpp  FVkBuffer.hpp  FVkCommandBuffer.cpp  FVkCommandBuffer.hpp  FVkContext.cpp  FVkContext.hpp  FVkDefine.hpp  FVkDescriptorSet.cpp  FVkDescriptorSet.hpp  FVkDescriptorSetLayout.cpp  FVkDescriptorSetLayout.hpp  FVkDevice.cpp  FVkDevice.hpp  FVkFence.cpp  FVkFence.hpp  FVkFramebuffer.cpp  FVkFramebuffer.hpp  FVkFunc.cpp  FVkFunc.hpp  FVkInputAssembler.cpp  FVkInputAssembler.hpp  FVkInstance.cpp  FVkInstance.hpp  FVkLogicalDevice.cpp  FVkLogicalDevice.hpp  FVkPhysicalDevice.cpp  FVkPhysicalDevice.hpp  FVkPipelineLayout.cpp  FVkPipelineLayout.hpp  FVkPipelineState.cpp  FVkPipelineState.hpp  FVkQueue.cpp  FVkQueue.hpp  FVkRenderPass.cpp  FVkRenderPass.hpp  FVkSampler.cpp  FVkSampler.hpp  FVkShader.cpp  FVkShader.hpp  (+20 more)
Engine/: CmakeLists.txt  Engine.hpp
Engine/App/: CmakeLists.txt  Config.cpp  GLFWApp.cpp  GLFWApp.hpp  main.cpp
Engine/Common/: BaseDefines.cpp  BaseDefines.hpp  CmakeLists.txt  Common.hpp  IApplication.hpp  IGameLogic.hpp  IRuntimeModule.hpp  NonCopyable.hpp  Singleton.hpp
Engine/Core/: CmakeLists.txt  Config.cpp  main.cpp
Engine/Core/App/: CmakeLists.txt  GLFWApp.cpp  GLFWApp.h  GLFWApp.hpp
Engine/Core/Common/: BaseDefines.h  NonCopyable.hpp  Singleton.hpp
Engine/Core/Interface/: IApplication.h  IGameLogic.hpp  IRuntimeModule.h
Engine/Core/Memory/: Allocator.cpp  Allocator.hpp  Buffer.hpp  CmakeLists.txt  MemoryDefine.hpp  MemoryManager.cpp  MemoryManager.hpp
Engine/Dag/: CmakeLists.txt  DAG.hpp  DAGCompiler.cpp  DAGCompiler.hpp  Define.hpp  DirectedAcyclicGraph.cpp  DirectedAcyclicGraph.hpp  Node.hpp  PassNode.hpp  ResourceNode.hpp
Engine/File/: CmakeLists.txt  Files.cpp  Files.hpp  Resource.hpp
Engine/Graphics/: CmakeLists.txt  GFXDeviceManager.h  Graphics.hpp
Engine/Graphics/GraphicsCore/: Base.hpp  Buffer.hpp  CmakeLists.txt  CommandBuffer.hpp  Context.hpp  DescriptorSet.hpp  DescriptorSetLayout.hpp  Device.hpp  DeviceManager.hpp  Fence.hpp  Framebuffer.hpp  GBase.hpp  GBuffer.hpp  GCommandBuffer.hpp  GContext.hpp  GDescriptorSet.hpp  GDescriptorSetLayout.hpp  GDevice.hpp  GFence.hpp  GFramebuffer.hpp  GInputAssembler.hpp  GPipelineLayout.hpp  GQueue.hpp  GRenderPass.hpp  GSampler.hpp  GShader.hpp  GTexture.hpp  GraphicsDefine.hpp  GraphicsFactory.hpp  Image.hpp  InputAssembler.hpp  PipelineLayout.hpp  Queue.hpp  RenderPass.hpp  (+3 more)
Engine/Graphics/gfx-vulkan/: CMakeLists.txt  ResourceLimits.cpp  ResourceLimits.h  VKBuffer.cpp  VKBuffer.h  VKCommandBuffer.cpp  VKCommandBuffer.h  VKCommands.cpp  VKCommands.h  VKContext.cpp  VKContext.h  VKDescriptorSet.cpp  VKDescriptorSet.h  VKDescriptorSetLayout.cpp  VKDescriptorSetLayout.h  VKDevice.cpp  VKDevice.h  VKFence.cpp  VKFence.h  VKFramebuffer.cpp  VKFramebuffer.h  VKGPUObjects.h  VKInputAssembler.cpp  VKInputAssembler.h  VKPipelineLayout.cpp  VKPipelineLayout.h  VKPipelineState.cpp  VKPipelineState.h  VKQueue.cpp  VKQueue.h  VKRenderPass.cpp  VKRenderPass.h  VKSPIRV.h  VKSampler.cpp  VKSampler.h  VKShader.cpp  VKShader.h  VKStd.h  VKTexture.cpp  VKTexture.h  (+2 more)
Engine/Log/: CmakeLists.txt  Log.cpp  Log.hpp
Engine/Math/: Bundle.hpp  CmakeLists.txt  Math.hpp  Matrix.hpp  Matrix.inl  Quaternion.hpp  Vector.cpp  Vector.hpp  Vector.inl  Vector2.cpp  Vector2.hpp  Vector2.inl  Vector3.cpp  Vector3.hpp  Vector3.inl
Engine/Memory/: Allocator.cpp  Allocator.hpp  Buffer.hpp  CmakeLists.txt  MemoryDefine.hpp  MemoryManager.cpp  MemoryManager.hpp
Engine/MultiThreadRender/: CmakeLists.txt  TaskBase.hpp  TaskQueue.cpp  TaskQueue.hpp
Engine/Scene/: CmakeLists.txt  Component.hpp  GameObject.cpp  GameObject.hpp
FlyApp/: App.cpp  App.hpp  AppInfo.hpp  CmakeLists.txt  Window.cpp  Window.hpp  WindowBase.hpp  main.cpp
Framework/: CmakeLists.txt
Framework/File/: CmakeLists.txt  File.cpp  File.hpp  FileDefine.hpp  IFile.cpp  IFile.hpp
Framework/Logger/: CmakeLists.txt  Logger.hpp  easylogging++.cc  easylogging++.h
Framework/Memory/: Allocator.cpp  Allocator.hpp  Buffer.hpp  MemoryDefine.hpp  MemoryManager.cpp  MemoryManager.hpp
Framework/Render/: CmakeLists.txt
Framework/Scene/: CmakeLists.txt  Define.hpp  GameObject.hpp  Node.hpp  Scene.cpp  Scene.hpp  SceneCompiler.cpp  SceneCompiler.hpp  SceneDefines.hpp
Game/: CmakeLists.txt  Config.cpp  Game.cpp  Game.hpp
Platform/: CMakeLists.txt
Platform/NULL/: CMakeLists.txt  GLFWApplication.cpp  GLFWApplication.hpp
Platform/WIN32/: CMakeLists.txt  WIN32Application.cpp  WIN32Application.hpp
Test/: CmakeLists.txt
Test/Renderer/: CmakeLists.txt  Vukan.cpp
Test/Scene/: CmakeLists.txt  Scene.cpp
Test/Vector/: CmakeLists.txt  MatrixTest.cpp  Vector2Test.cpp  Vector3Test.cpp
cmake/: Defines.cmake  Options.cmake
(+157 files in other folders)
