file(GLOB_RECURSE HPP_HEADER_FILES CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/Graphics/gfx-vulkan/*.hpp)
file(GLOB_RECURSE H_HEADER_FILES CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/Graphics/gfx-vulkan/*.h)
file(GLOB_RECURSE SOURCE_CPP_FILES CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/Graphics/gfx-vulkan/*.cpp )
file(GLOB_RECURSE SOURCE_C_FILES CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/Graphics/gfx-vulkan/*.c )
file(GLOB_RECURSE SOURCE_CC_FILES CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/Graphics/gfx-vulkan/*.cc )

set(GRAPHICS_VULKAN_FILES
    ${H_HEADER_FILES}
    ${HPP_HEADER_FILES}
    ${SOURCE_CPP_FILES}
    ${SOURCE_C_FILES}
    ${SOURCE_CC_FILES}
)

find_package(Vulkan REQUIRED)
link_libraries(Vulkan::Vulkan)

find_package(glslang CONFIG REQUIRED)
link_libraries(HLSL SPIRV glslang OGLCompiler)